# AegisFlow

./: .gitignore  README.md  development_plan.md
backend/: .env.example  README.md  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models_db.py
backend/app/agents/: treasury_agent.py
backend/app/api/: ai_agent.py  audit.py  compliance.py  health.py  transfers.py
backend/app/services/: audit.py  blockchain.py  blockchain_solana.py  compliance.py  (+1 more)
backend/scripts/: init_solana_program.py
contracts/: .env.example  README.md  apply_deployed.py  deploy.py  hardhat.config.js  package.json  requirements.txt
contracts-solana/: Anchor.toml  README.md
contracts-solana/programs/aegisflow/: Cargo.toml
contracts-solana/programs/aegisflow/src/: lib.rs
contracts/contracts/: AegisFlowVault.sol  ComplianceRegistry.sol
contracts/scripts/: deploy.js
contracts/test/: AegisFlowVault.test.js  ComplianceRegistry.test.js
docs/: DEPLOYMENT_CHECKLIST.md  DEPLOY_WINDOWS.md  WALLET_AND_KEYS.md
scripts/: deploy_solana_devnet.ps1  deploy_solana_devnet.sh  install_platform_tools_admin.ps1  install_solana_admin.ps1  verify_stack.ps1
webapp/: .env.example  README.md  app.py  config.py  models.py  requirements.txt
webapp/forms/: __init__.py
webapp/routes/: ai_agent.py  audit.py  auth.py  compliance.py  dashboard.py  limits.py  transfers.py
webapp/templates/: ai_agent.html  audit.html  base.html  dashboard.html  index.html  limits.html  login.html  transfer.html  travel_rule.html  travel_rule_detail.html  whitelist.html
webapp/utils/: api.py
(+1 files in other folders)
