[package]
name = "aegisflow"
version = "0.1.0"
description = "AegisFlow compliance registry on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegisflow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
